# bachelor-thesis

./: .gitmodules  README.md
alignment-evaluation/: Cargo.toml  Evaluation.ipynb  README.md  Untitled.ipynb  df_cs_best.tex  df_sop_best.tex  df_time_best.tex  notebook.tex
alignment-evaluation/.ipynb_checkpoints/: Evaluation-checkpoint.ipynb  Untitled-checkpoint.ipynb
alignment-evaluation/src/: main.rs  score.rs
alignment-evaluation/src/data_loaders/: balibase.rs  mod.rs
dialign_package/: README.md
dialign_package/src/: .gitignore  alig_graph_closure.c  alig_graph_closure.h  anchor.c  define.h  dialign.c  dialign.h  dialign2-2  frag_chain.c  functions.c  input.c  mafft.fasta  output.c  para.c  perf.data.old  pratique.c  pratique.h  regex.c  wgt.c
evaluation-data/fast-bb-aligned/: analysis.ipynb
pattern_sets/: README.md  generate_pattern_sets.py
pattern_sets/data/: w-2_d-10.out  w-2_d-11.out  w-2_d-12.out  w-2_d-13.out  w-2_d-14.out  w-2_d-15.out  w-2_d-16.out  w-2_d-2.out  w-2_d-3.out  w-2_d-4.out  w-2_d-5.out  w-2_d-6.out  w-2_d-7.out  w-2_d-8.out  w-2_d-9.out  w-3_d-10.out  w-3_d-11.out  w-3_d-12.out  w-3_d-13.out  w-3_d-14.out  w-3_d-15.out  w-3_d-16.out  w-3_d-8.out  w-3_d-9.out  w-4_d-10.out  w-4_d-11.out  w-4_d-12.out  w-4_d-13.out  w-4_d-14.out  w-4_d-15.out  w-4_d-16.out  w-4_d-9.out  w-5_d-12.out  w-5_d-13.out  w-5_d-14.out  w-5_d-15.out  w-5_d-16.out  w-6_d-10.out  w-6_d-11.out  w-6_d-12.out  (+14 more)
thesis/: main.aux  main.bbl  main.blg  main.out  main.tex  main.thm  main.toc  main.xmpdata  notes.md  pdfa.xmpi
thesis/common/: commands.tex  config.tex
(+83913 files in other folders)
