[package]
name = "alignment-evaluation"
version = "0.1.0"
authors = ["robinwilliam.hundt <robinwilliam.hundt@stud.uni-goettingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spam-align = {path = "spam-align"}
bali-score = {path = "bali-score"}
serde = { version = "1.0.105", features = ["derive"] }
itertools = "0.9.0"
rayon = "1.3.0"
structopt = "0.3.12"
quick-xml = { version = "0.18.1", features = ["serialize"] }
serde_json = "1.0.48"
indicatif = { version = "0.14.0", features = ["with_rayon"] }
anyhow = "1.0.27"
num-integer = "0.1.42"
